--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
         <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet">
@@ -25,13 +26,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="https://codepen.io/tashfeenMustafa">Tashfeen Choudhury</a>
+                  <a class="navbar-brand" href="https://codepen.io/tashfeenMustafa">Tashfeen M. Choudhury</a>
                 </div>
         
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link</a></li>
+                        <li><a href="http://codepen.io/tashfeenMustafa"><i class="fa fa-codepen"></i></a></li>
+                        <li><a href="http://github.com/tashfeenMustafa"><i class="fa fa-github"></i></a></li>
+                        <li><a href="http://behance.net/bearded-man"><i class="fa fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -42,20 +46,24 @@
             <div class="container-fluid" id="wrap">
                 <div class="row link-icon">
                     <div class=" col-md-12 text-center">
+                        <h2 class="title">URL Shortener</h2>
                         <!-- For IE9 or below. -->
-                        <i class="material-icons">&#xE157;</i>
+                        <svg class="link-icon" fill="#000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/>
+                        </svg>
                     </div>
                 </div>
                 <div class="row search-bar">
                     <div class="input-group input-group-lg">
                         <input type="text" id="url-field" class="form-control" placeholder="Place your link here..." aria-describedby="url shortening form">
                         <span class="input-group-btn">
-                            <button class="btn btn-shorten" type="button">SHORTEN</button>
+                            <button class="btn btn-shorten" type="button">SHORTEN URL</button>
                         </span>
                     </div>
                 </div>
             </div>
-            <div class="container shortened-links">
+            <div class="container shortened-links text-center">
                 <div class="row">
                     <div class=" col-lg-12 ">
                         <div id="link"></div>
@@ -64,8 +72,11 @@
             </div>
         </section>
         
+        
         <footer class="footer">
             
         </footer>
+        <canvas id="networks"></canvas>
     </body>
+    <script src="/javascripts/animation.js"></script>
 </html>
